--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <nav class="navbar navbar-expand-lg sticky-top custom-nav">
         <div class="container-fluid">
             <a class="navbar-brand text-light fw-bold" href="index.html">SWEETSPOT COOKIE CO.</a>
@@ -19,7 +18,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="menu.html">Menu / Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cart.html">🛒 Cart (3)</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cart.html">🛒 Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -63,7 +62,6 @@
     <footer class="bg-dark text-light text-center py-3">
         <p>&copy; 2025 SweetSpot Cookie Co. | Sample Website for Assignment Documentation.</p>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
