--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="menu.html">Menu / Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cart.html">🛒 Cart (3)</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cart.html">🛒 Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,7 @@
                         <h5 class="card-title">Classic Cookie</h5>
                         <p class="card-text text-success fw-bold">$2.50</p>
                         <p class="card-text">The perfect balance of soft, chewy center and crisp edges.</p>
-                        <a href="#" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                        <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                         <h5 class="card-title">Red Velvet Dream</h5>
                         <p class="card-text text-success fw-bold">$3.00</p>
                         <p class="card-text">Rich cocoa flavor with a signature tangy cream cheese swirl.</p>
-                        <a href="#" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                        <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <h5 class="card-title">Matcha Magic</h5>
                         <p class="card-text text-success fw-bold">$3.50</p>
                         <p class="card-text">Subtle, earthy green tea balanced with white chocolate chips.</p>
-                        <a href="#" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                        <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
                     </div>
                 </div>
             </div>
