--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="menu.html">Menu / Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="cart.html">🛒 Cart (3)</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="cart.html">🛒 Cart</a></li>
                 </ul>
             </div>
         </div>
