--- a/menu.html
+++ b/menu.html
@@ -1,42 +1,75 @@
-<section class="container py-5">
-    <h1 class="text-center mb-5">Our Signature Menu</h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        
-        <div class="col">
-            <div class="card h-100 shadow-lg">
-                <img src="classic.jpg" class="card-img-top" alt="Classic Cookie" style="height: 250px; object-fit: cover;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Classic Cookie</h5>
-                    <p class="card-text text-success fw-bold">$2.50</p>
-                    <p class="card-text">The perfect balance of soft, chewy center and crisp edges.</p>
-                    <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu | SweetSpot Cookie Co.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg sticky-top custom-nav">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light fw-bold" href="index.html">SWEETSPOT COOKIE CO.</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="menu.html">Menu / Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cart.html">🛒 Cart</a></li>
+                </ul>
             </div>
         </div>
+    </nav>
 
-        <div class="col">
-            <div class="card h-100 shadow-lg">
-                <img src="redvelvet.jpg" class="card-img-top" alt="Red Velvet Dream" style="height: 250px; object-fit: cover;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Red Velvet Dream</h5>
-                    <p class="card-text text-success fw-bold">$3.00</p>
-                    <p class="card-text">Rich cocoa flavor with a signature tangy cream cheese swirl.</p>
-                    <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+    <section class="container py-5">
+        <h1 class="text-center mb-5">Our Signature Menu</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            
+            <div class="col">
+                <div class="card h-100 shadow-lg">
+                    <img src="classic.jpg" class="card-img-top" alt="Classic Cookie" style="height: 250px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Classic Cookie</h5>
+                        <p class="card-text text-success fw-bold">$2.50</p>
+                        <p class="card-text">The perfect balance of soft, chewy center and crisp edges.</p>
+                        <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col">
-            <div class="card h-100 shadow-lg">
-                <img src="matcha.jpg" class="card-img-top" alt="Matcha Magic" style="height: 250px; object-fit: cover;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Matcha Magic</h5>
-                    <p class="card-text text-success fw-bold">$3.50</p>
-                    <p class="card-text">Subtle, earthy green tea balanced with white chocolate chips.</p>
-                    <a href="product-classic.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+            <div class="col">
+                <div class="card h-100 shadow-lg">
+                    <img src="redvelvet.jpg" class="card-img-top" alt="Red Velvet Dream" style="height: 250px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Red Velvet Dream</h5>
+                        <p class="card-text text-success fw-bold">$3.00</p>
+                        <p class="card-text">Rich cocoa flavor with a signature tangy cream cheese swirl.</p>
+                        <a href="product-redvelvet.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </div>
-</section>
+            <div class="col">
+                <div class="card h-100 shadow-lg">
+                    <img src="matcha.jpg" class="card-img-top" alt="Matcha Magic" style="height: 250px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Matcha Magic</h5>
+                        <p class="card-text text-success fw-bold">$3.50</p>
+                        <p class="card-text">Subtle, earthy green tea balanced with white chocolate chips.</p>
+                        <a href="product-matcha.html" class="btn custom-btn-primary w-100 mt-2">View Details & Add to Cart</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <footer class="bg-dark text-light text-center py-3">
+        <p>&copy; 2025 SweetSpot Cookie Co. | Sample Website for Assignment Documentation.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
