--- a/product-matcha.html
+++ b/product-matcha.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matcha Details | YOUR NEW NAME</title>
+    <title>Matcha Details | GCOOKIES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg sticky-top custom-nav">
         <div class="container-fluid">
-            <a class="navbar-brand text-light fw-bold" href="index.html">YOUR NEW NAME</a>
+            <a class="navbar-brand text-light fw-bold" href="index.html">GCOOKIES</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,7 +56,7 @@
     </section>
 
     <footer class="bg-dark text-light text-center py-3">
-        <p>&copy; 2025 YOUR NEW NAME | Sample Website for Assignment Documentation.</p>
+        <p>&copy; 2025 GCOOKIES | Sample Website for Assignment Documentation.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
